[Update]顧客ページレイアウト

--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 
   <div class="row">
-    <h4 class="py-4">会員情報編集</h4>
+    <h3 class="py-4">会員情報編集</h3>
   </div>
 
 
@@ -42,7 +42,7 @@
     <div class="row pb-4">
       <div class="col-3">住所</div>
       <div class="col-6">
-        <%= f.text_field :address, class: 'form-control' %>
+        <%= f.text_field :address, class: 'form-control border-dark' %>
       </div>
       <div class="col-3"></div>
     </div>
