--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -11,9 +11,9 @@
 
   <div class="row pt-3">
     <div class="col-9 offset-1">
-    <table class="table table-bordered">
+    <table class="table table-bordered table-striped table-light">
       <thead>
-        <tr>
+        <tr class="text-center">
           <th>商品名</th>
           <th>単価(税込)</th>
           <th>数量</th>
@@ -23,14 +23,14 @@
       </thead>
 
 
-      <tbody>
+      <tbody class="h6">
         <% @cart_items.each do |cart_item| %>
         <tr>
           <td>
             <%= image_tag cart_item.item.get_item_image(50, 50) %>
             <%= cart_item.item.name %>
           </td>
-          <td>
+          <td class="align-middle">
             <%= cart_item.item.with_tax_price %>
           </td>
           <td>
@@ -39,7 +39,7 @@
               <%= f.submit "変更", class: 'btn btn-success' %>
             <% end %>
           </td>
-          <td><%= cart_item.subtotal %></td>
+          <td class="align-middle"><%= cart_item.subtotal %></td>
           <td>
             <%= link_to "削除する", cart_item_path(cart_item), method: :delete, class: 'btn btn-danger' %>
           </td>
