--- a/app/views/public/customers/confirm.html.erb
+++ b/app/views/public/customers/confirm.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
-  <div class="row m-5">
-    <div class="col-4 offset-4 center-block">
-      <h4>本当に退会しますか？</h4>
+  <div class="row p-5 ml-3">
+    <div class="col-6 offset-3 center-block pl-5">
+      <h2>本当に退会しますか？</h2>
     </div>
-    <div class="col-4"></div>
+    <div class="col-3"></div>
   </div>
 
   <div class="row ml-3">
@@ -15,7 +15,7 @@
     <div class="col-3"></div>
   </div>
 
-  <div class="row my-5">
+  <div class="row py-5">
     <div class="col-2 offset-4 center-block">
       <%= link_to "退会しない", customers_mypage_path(@customer), class: 'btn btn-primary' %>
     </div>
