--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
-    <h4 class="py-4 px-5">マイページ</h4>
+    <h3 class="pt-5 pb-2 px-5">マイページ</h3>
   </div>
 
   <div class="row py-3">
-    <h5 class="pr-3">登録情報</h5>
+    <h5 class="px-3 mt-2">登録情報</h5>
     <div>
        <%= link_to "編集する", customers_information_edit_path(@customer), class: 'btn btn-success' %>
     </div>
@@ -12,37 +12,37 @@
 
   <div class="row">
     <div class="col-8">
-      <table class="table table-bordered">
+      <table class="table table-bordered table-light">
       <thead>
         <tr>
-          <th>氏名</th>
-          <td>
+          <th class="table-secondary border-dark">氏名</th>
+          <td class="border-dark">
             <%= @customer.last_name %>
             <%= @customer.first_name %>
             </td>
         </tr>
         <tr>
-          <th>カナ</th>
-          <td>
+          <th class="table-secondary border-dark">カナ</th>
+          <td class="border-dark">
             <%= @customer.last_name_kana %>
             <%= @customer.first_name_kana %>
           </td>
         </tr>
         <tr>
-          <th>郵便番号</th>
-          <td><%= @customer.post_code %></td>
+          <th class="table-secondary border-dark">郵便番号</th>
+          <td class="border-dark"><%= @customer.post_code %></td>
         </tr>
         <tr>
-          <th>住所</th>
-          <td><%= @customer.address %></td>
+          <th class="table-secondary border-dark">住所</th>
+          <td class="border-dark"><%= @customer.address %></td>
         </tr>
         <tr>
-          <th>電話番号</th>
-          <td><%= @customer.telephone_number %></td>
+          <th class="table-secondary border-dark">電話番号</th>
+          <td class="border-dark"><%= @customer.telephone_number %></td>
         </tr>
         <tr>
-          <th>メールアドレス</th>
-          <td><%= @customer.email %></td>
+          <th class="table-secondary border-dark">メールアドレス</th>
+          <td class="border-dark"><%= @customer.email %></td>
         </tr>
       </thead>
     </table>
@@ -50,15 +50,15 @@
     <div class="col-3"></div>
   </div>
 
-  <div class="row py-3">
-    <h5 class="pr-5">配送先</h5>
+  <div class="row pt-3">
+    <h5 class="px-3 mt-2 mr-5">配送先</h5>
     <div>
       <%= link_to "一覧を見る", addresses_path(@customer), class: 'btn btn-primary' %>
     </div>
   </div>
 
   <div class="row pt-3 pb-5">
-    <h5 class="pr-4">注文履歴</h5>
+    <h5 class="px-3 mt-2 mr-4">注文履歴</h5>
     <div>
       <%= link_to "一覧を見る", orders_path(@customer), class: 'btn btn-primary' %>
     </div>
