--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
-  <div class="row p-5">
+  <div class="row px-5 pt-5">
     <h4>注文履歴一覧</h4>
   </div>
 
   <div class="row">
     <div class="col-12">
-      <table class="table table-bordered">
-        <thead>
+      <table class="table table-bordered table-light table-striped">
+        <thead class="text-center">
           <tr>
             <th>注文日</th>
             <th>配送先</th>
@@ -20,19 +20,19 @@
           <% @orders.each do |order| %>
           <tr>
             <td><%= order.created_at.strftime('%Y/%m/%d') %></td>
-            <td>
+            <td class="align-middle">
               <div>〒<%= order.delivery_post_code %></div>
               <div><%= order.delivery_address %></div>
               <div><%= order.delivery_name %></div>
             </td>
             <td>
               <% order.order_details.each do |order_detail| %>
-                <div><%= order_detail.item.name %></div>
+                <div class="align-middle"><%= order_detail.item.name %></div>
               <% end %>
             </td>
-            <td><%= order.total_payment %></td>
-            <td><%= order.status_i18n %></td>
-            <td><%= link_to "表示する", order_path(order), class: 'btn btn-primary' %></td>
+            <td class="align-middle"><%= order.total_payment %></td>
+            <td class="align-middle"><%= order.status_i18n %></td>
+            <td class="align-middle text-center"><%= link_to "表示する", order_path(order), class: 'btn btn-primary' %></td>
           </tr>
           <% end %>
         </tbody>
