--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -37,37 +37,42 @@
             <%= @customer.last_name %><%= @customer.first_name %>
           </div>
         </div>
-
-        <!--登録先住所-->
-        <div class="pl-3">
-          <%= f.radio_button :address_option, 1 %>
-          <%= f.label :address_option, "登録済み住所から選択" %>
-          <div class="ml-5 mb-3">
-          <%= f.select :select_option, options_from_collection_for_select(@customer.addresses.all, :id, :address_display) %>
-          </div>
-        </div>
-
-        <!--新規登録住所-->
-        <div class="pl-3">
-          <%= f.radio_button :address_option, 2 %>
-          <%= f.label :address_option, "新しいお届け先" %>
-
-          <div class="pl-5">
-            郵便番号(ハイフンなし)
-            <%= f.text_field :delivery_post_code, placeholder: "0000000",class: 'ml-2' %>
-          </div>
-          <div class="pl-5">
-            住所
-            <%= f.text_field :delivery_address, placeholder: "東京都渋谷区代々木神園町0-0", class: 'ml-5' %>
-          </div>
-          <div class="pl-5">
-            宛名
-            <%= f.text_field :delivery_name, placeholder: "令和道子", class: 'ml-5' %>
-          </div>
-
-        </div>
       </div>
       <div class="col-1"></div>
+    </div>
+
+    <!--登録先住所-->
+    <div class="row pl-3">
+      <div class="col-10 offset-1">
+        <%= f.radio_button :address_option, 1 %>
+        <%= f.label :address_option, "登録済み住所から選択" %>
+        <div class="ml-5 mb-3">
+        <%= f.select :select_option, options_from_collection_for_select(@customer.addresses.all, :id, :address_display) %>
+        </div>
+      </div>
+    </div>
+
+    <!--新規登録住所-->
+    <div class="row pl-3">
+      <div class="col-10 offset-1">
+        <%= f.radio_button :address_option, 2 %>
+        <%= f.label :address_option, "新しいお届け先" %>
+      </div>
+    </div>
+
+    <div class="row pl-3">
+      <div class="col-3 offset-1 pl-5">
+        <div class="pb-4">郵便番号(ハイフンなし)</div>
+        <div class="pb-4">住所</div>
+        <div class="pb-4">宛名</div>
+      </div>
+
+      <div class="col-6">
+        <div class="pb-3"><%= f.text_field :delivery_post_code, placeholder: "0000000" %></div>
+        <div class="pb-3"><%= f.text_field :delivery_address, placeholder: "東京都渋谷区代々木神園町0-0", class: 'form-control border-dark' %></div>
+        <div class="pb-3"><%= f.text_field :delivery_name, placeholder: "令和道子" %></div>
+      </div>
+      <div class="col-2"></div>
     </div>
 
     <div class="row m-2">
