--- a/app/views/public/orders/thanks.html.erb
+++ b/app/views/public/orders/thanks.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row">
-    <div class="col-6 offset-3">
+  <div class="row pt-5">
+    <div class="col-6 offset-3 pt-5">
       <h2 class="text-center">ご注文ありがとうございました！</h2>
     </div>
     <div class="col-3"></div>
