--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -9,26 +9,40 @@
   <div class="row">
 
     <div class="col-8">
-      <table class="table table-light table-striped">
+      <table class="table">
         <thead>
           <tr>
-            <th>商品名</th>
-            <th>単価(税込)</th>
-            <th>数量</th>
-            <th>小計</th>
+            <th class="table-secondary border border-dark">
+              商品名
+            </th>
+            <th class="table-secondary border border-dark">
+              単価(税込)
+            </th>
+            <th class="table-secondary border border-dark">
+              数量
+            </th>
+            <th class="table-secondary border border-dark">
+              小計
+            </th>
           </tr>
         </thead>
 
         <tbody class="h6">
           <% @cart_items.each do |cart_item| %>
           <tr>
-            <td>
+            <td class="table-light border border-dark">
               <span class="mx-2"><%= image_tag cart_item.item.get_item_image(50, 50) %></span>
               <%= cart_item.item.name %>
             </td>
-            <td><%= cart_item.item.with_tax_price %></td>
-            <td><%= cart_item.amount %></td>
-            <td><%= cart_item.subtotal %></td>
+            <td class="table-light border border-dark align-middle">
+              <%= cart_item.item.with_tax_price %>
+            </td>
+            <td class="table-light border border-dark align-middle">
+              <%= cart_item.amount %>
+            </td>
+            <td class="table-light border border-dark align-middle">
+              <%= cart_item.subtotal %>
+            </td>
           </tr>
           <% end %>
         </tbody>
@@ -39,19 +53,27 @@
     <div class="col-3 h6">
       <table class="table table-light table-striped">
         <tr>
-          <th>送料</th>
-          <td>
+          <th class="table-secondary border border-dark">
+            送料
+          </th>
+          <td class="table-light border border-dark">
             <%= f.hidden_field :postage, value: @postage %>
             <%= @postage %>
           </td>
         </tr>
         <tr>
-          <th>商品合計</th>
-          <td><%= @total_price %></td>
+          <th class="table-secondary border border-dark">
+            商品合計
+          </th>
+          <td class="table-light border border-dark">
+            <%= @total_price %>
+          </td>
         </tr>
         <tr>
-          <th>請求金額</th>
-          <td>
+          <th class="table-secondary border border-dark">
+            請求金額
+          </th>
+          <td class="table-light border border-dark">
             <%= f.hidden_field :total_payment, value: @total_payment %>
             <%= @total_payment %>
           </td>
