[Update]address/mypage/部分テンプレートレイアウト修正

--- a/app/views/public/_left_contents.html.erb
+++ b/app/views/public/_left_contents.html.erb
@@ -1,5 +1,5 @@
-<div class="border bg-white">
-  <h5 class="border-bottom p-2 text-center">ジャンル検索</h5>
+<div class="bg-white">
+  <h5 class="border-bottom border-secondary p-2 text-center">ジャンル検索</h5>
 
   <ul class="list-unstyled px-2">
     <% genres.each do |genre| %>
