--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -2,24 +2,24 @@
   <div class="row p-4">
     <h4>配送先編集</h4>
   </div>
-  
+
   <%= form_with model: @address, url:address_path, method: :patch do |f| %>
-  
+
     <div class="row py-1">
       <div class="col-3">郵便番号(ハイフンなし)</div>
       <div class="col-9">
         <%= f.text_field :post_code %>
       </div>
     </div>
-    
+
     <div class="row py-1">
       <div class="col-3">住所</div>
       <div class="col-5">
-        <%= f.text_field :address, class: 'form-control' %>
+        <%= f.text_field :address, class: 'form-control border-dark' %>
       </div>
       <div class="col-4"></div>
     </div>
-    
+
     <div class="row py-1">
       <div class="col-3">宛名</div>
       <div class="col-5">
