--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -12,37 +12,57 @@
 
   <div class="row">
     <div class="col-8">
-      <table class="table table-bordered table-light">
+      <table class="table">
       <thead>
         <tr>
-          <th class="table-secondary border-dark">氏名</th>
-          <td class="border-dark">
+          <th class="table-secondary border border-dark">
+            氏名
+          </th>
+          <td class="table-light border border-dark">
             <%= @customer.last_name %>
             <%= @customer.first_name %>
             </td>
         </tr>
         <tr>
-          <th class="table-secondary border-dark">カナ</th>
-          <td class="border-dark">
+          <th class="table-secondary border border-dark">
+            カナ
+          </th>
+          <td class="table-light border border-dark">
             <%= @customer.last_name_kana %>
             <%= @customer.first_name_kana %>
           </td>
         </tr>
         <tr>
-          <th class="table-secondary border-dark">郵便番号</th>
-          <td class="border-dark"><%= @customer.post_code %></td>
+          <th class="table-secondary border border-dark">
+            郵便番号
+          </th>
+          <td class="table-light border border-dark">
+            <%= @customer.post_code %>
+          </td>
         </tr>
         <tr>
-          <th class="table-secondary border-dark">住所</th>
-          <td class="border-dark"><%= @customer.address %></td>
+          <th class="table-secondary border border-dark">
+            住所
+          </th>
+          <td class="table-light border border-dark">
+            <%= @customer.address %>
+          </td>
         </tr>
         <tr>
-          <th class="table-secondary border-dark">電話番号</th>
-          <td class="border-dark"><%= @customer.telephone_number %></td>
+          <th class="table-secondary border border-dark">
+            電話番号
+          </th>
+          <td class="table-light border border-dark">
+            <%= @customer.telephone_number %>
+          </td>
         </tr>
         <tr>
-          <th class="table-secondary border-dark">メールアドレス</th>
-          <td class="border-dark"><%= @customer.email %></td>
+          <th class="table-secondary border border-dark">
+            メールアドレス
+          </th>
+          <td class="table-light border border-dark">
+            <%= @customer.email %>
+          </td>
         </tr>
       </thead>
     </table>
