--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,68 +1,53 @@
 <div class="container">
   <div class="row">
-    <h4 class="py-4">
+    <h4 class="pt-5 pb-3">
       <%= @customer_name %>さんの会員詳細
     </h4>
   </div>
 
   <div class="row">
-    <div class="col-2">会員ID</div>
-    <div class="col-10">
-      <%= @customer.id %>
+    <div class="col-2">
+      <div class="p-2">会員ID</div>
+      <div class="p-2">氏名</div>
+      <div class="p-2">フリガナ</div>
+      <div class="p-2">郵便番号</div>
+      <div class="p-2">住所</div>
+      <div class="p-2">電話番号</div>
+      <div class="p-2">メールアドレス</div>
+      <div class="p-2">ステータス</div>
     </div>
-  </div>
 
-  <div class="row">
-    <div class="col-2">氏名</div>
     <div class="col-10">
-      <%= @customer.last_name %>  <%= @customer.first_name %>
-    </div>
-  </div>
+      <div class="p-2">
+        <%= @customer.id %>
+      </div>
+      <div class="p-2">
+        <%= @customer.last_name %>  <%= @customer.first_name %>
+      </div>
+      <div class="p-2">
+        <%= @customer.last_name_kana %>  <%= @customer.first_name_kana %>
+      </div>
+      <div class="p-2">
+        <%= @customer.post_code %>
+      </div>
+      <div class="p-2">
+        <%= @customer.address %>
+      </div>
+      <div class="p-2">
+        <%= @customer.telephone_number %>
+      </div>
+      <div class="p-2">
+        <%= @customer.email %>
+      </div>
+      <div class="p-2 text-success">
+        <%= @customer.is_deleted ? '無効' : '有効' %>
+      </div>
 
-  <div class="row">
-    <div class="col-2">フリガナ</div>
-    <div class="col-10">
-      <%= @customer.last_name_kana %>  <%= @customer.first_name_kana %>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-2">郵便番号</div>
-    <div class="col-10">
-      <%= @customer.post_code %>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-2">住所</div>
-    <div class="col-10">
-      <%= @customer.address %>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-2">電話番号</div>
-    <div class="col-10">
-      <%= @customer.telephone_number %>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-2">メールアドレス</div>
-    <div class="col-10">
-      <%= @customer.email %>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-2">ステータス</div>
-    <div class="col-10">
-      <%= @customer.is_deleted ? '無効' : '有効' %>
     </div>
   </div>
 
   <div class="row mt-4">
-    <div class="col-4">
+    <div class="col-2 offset-2">
       <%= link_to "編集する", edit_admin_customer_path(@customer), class: 'btn btn-success' %>
     </div>
     <div class="col-8">
