--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,18 +1,19 @@
 <div class="container">
   <div class="row">
-    <h4>ジャンル編集</h4>
+    <h4 class="p-5 ml-5">ジャンル編集</h4>
   </div>
 
   <div class="row">
-    <div class="pr-3">ジャンル名</div>
-    <%= form_with model: @genre, url: admin_genre_path, method: :patch do |f| %>
-      <div class="mr-3">
-        <%= f.text_field :name %>
-      </div>
-      <div class="px-2">
-        <%= f.submit "変更を保存", class: 'btn btn-success' %>
-      </div>
-    <% end %>
+    <div class="col-2">
+      <div class="pt-2">ジャンル名</div>
+    </div>
+
+    <div class="col-10">
+      <%= form_with model: @genre, url: admin_genre_path, method: :patch do |f| %>
+          <%= f.text_field :name, class: 'mr-5' %>
+          <%= f.submit "変更を保存", class: 'btn btn-success px-3' %>
+      <% end %>
+    </div>
 
   </div>
 </div>
