--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,48 +1,51 @@
 <div class="container">
-  <div class="row">
-    <h4>商品編集</h4>
-  </div>
 
   <div class="row">
-    <%= form_with model: @item, url:admin_item_path, method: :patch do |f| %>
-
-    <div>
-      商品画像
-      <%= f.file_field :item_image, accept: "image/*" %>
+    <div class="col-2 offset-2">
+      <h4 class="py-4">商品編集</h4>
     </div>
-
-    <div>
-      商品名
-      <%= f.text_field :name %>
-    </div>
-
-    <div>
-      商品説明
-      <%= f.text_area :introduction %>
-    </div>
-
-    <div>
-      ジャンル
-      <%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name) %>
-    </div>
-
-    <div>
-      税抜価格
-      <%= f.text_field :price, placeholder: "1000" %>
-    </div>
-
-    <div>
-      販売ステータス
-      <%= f.radio_button :is_sale, "true" %>
-      <%= f.label :is_sale_true, "販売中" %>
-
-      <%= f.radio_button :is_sale, "false" %>
-      <%= f.label :is_sale_false, "販売停止中" %>
-    </div>
-
-    <div>
-      <%= f.submit "変更を保存", class: 'btn btn-success' %>
-    </div>
-    <% end %>
+    <div class="col-9"></div>
   </div>
+
+  <%= form_with model: @item, url:admin_item_path, method: :patch do |f| %>
+    <div class="row">
+      <div class="col-2 offset-2">
+        <div class="pt-4">商品画像</div>
+        <div class="pt-4">商品名</div>
+        <div class="pt-4">商品説明</div>
+        <div class="pt-5">ジャンル</div>
+        <div class="pt-4">税抜価格</div>
+        <div class="pt-4">販売ステータス</div>
+      </div>
+
+      <div class="col-3">
+        <div class="pt-3">
+          <%= f.file_field :item_image, accept: "image/*" %>
+        </div>
+        <div class="pt-3">
+          <%= f.text_field :name, class: 'form-control border-dark' %>
+        </div>
+        <div class="pt-3">
+          <%= f.text_area :introduction, class: 'form-control' %>
+        </div>
+        <div class="pt-3">
+          <%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name), class: 'form-control border-dark' %>
+        </div>
+        <div class="pt-3">
+          <%= f.text_field :price, placeholder: "1000" %>円
+        </div>
+        <div class="pt-3">
+          <%= f.radio_button :is_sale, "true" %>
+          <%= f.label :is_sale_true, "販売中" %>
+
+          <%= f.radio_button :is_sale, "false" %>
+          <%= f.label :is_sale_false, "販売停止中" %>
+        </div>
+        <div class="pt-3">
+          <%= f.submit "変更を保存", class: 'btn btn-success px-3' %>
+        </div>
+      </div>
+      <div class="col-4"></div>
+    </div>
+   <% end %>
 </div>
