--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,34 +1,58 @@
 <div class="container">
-  <div class="row">
+
+  <div class="row py-4">
+    <div class="col-10 offset-2">
+      <h4>商品詳細</h4>
+    </div>
+  </div>
+
+  <div class="row pt-4">
     <div class="col-3">
       <%= image_tag @item.get_item_image(300, 300) %>
     </div>
 
-    <div class="col-9">
+    <div class="col-2 offset-1">
       <div>
         商品名
-        <%= @item.name %>
       </div>
       <div>
         商品説明
-        <%= @item.introduction %>
       </div>
       <div>
         ジャンル
-        <%= @item.genre.name %>
       </div>
       <div>
         税込価格(税抜価格)
+      </div>
+      <div>
+        販売ステータス
+      </div>
+    </div>
+    <div class="col-4">
+      <div>
+        <%= @item.name %>
+      </div>
+      <div>
+        <%= @item.introduction %>
+      </div>
+      <div>
+        <%= @item.genre.name %>
+      </div>
+      <div>
         <%= @item.with_tax_price %>
         (<%= @item.price %>)
       </div>
       <div>
-        販売ステータス
         <%= @item.is_sale ? '販売中' : '販売停止中' %>
       </div>
     </div>
-    <div class="row my-4">
+    <div class="col-2"></div>
+  </div>
+
+  <div class="row my-4">
+    <div class="col-7 offset-5">
       <%= link_to "編集する", edit_admin_item_path(@item), class: 'btn btn-success' %>
     </div>
   </div>
+
 </div>
