--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -6,43 +6,28 @@
     </div>
   </div>
 
-  <div class="row pt-4">
+  <div class="row py-4 bg-white">
     <div class="col-3">
       <%= image_tag @item.get_item_image(300, 300) %>
     </div>
 
     <div class="col-2 offset-1">
-      <div>
-        商品名
-      </div>
-      <div>
-        商品説明
-      </div>
-      <div>
-        ジャンル
-      </div>
-      <div>
-        税込価格(税抜価格)
-      </div>
-      <div>
-        販売ステータス
-      </div>
+      <div class="pb-2">商品名</div>
+      <div class="pb-4">商品説明</div>
+      <div class="pt-3 pb-2">ジャンル</div>
+      <div class="pb-2">税込価格(税抜価格)</div>
+      <div class="pb-2">販売ステータス</div>
     </div>
+
     <div class="col-4">
-      <div>
-        <%= @item.name %>
-      </div>
-      <div>
-        <%= @item.introduction %>
-      </div>
-      <div>
-        <%= @item.genre.name %>
-      </div>
-      <div>
+      <div class="pb-2"><%= @item.name %></div>
+      <div class="pb-3"><%= @item.introduction %></div>
+      <div class="pb-2"><%= @item.genre.name %></div>
+      <div class="pb-2">
         <%= @item.with_tax_price %>
-        (<%= @item.price %>)
+        (<%= @item.price %>)円
       </div>
-      <div>
+      <div class="pb-2 text-success">
         <%= @item.is_sale ? '販売中' : '販売停止中' %>
       </div>
     </div>
