--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -2,15 +2,15 @@
 
   <div class="row">
 <!--left-->
-    <div class="col-2 mt-5">
+    <div class="col-2 pt-5">
       <%= render 'public/left_contents', genres: @genres %>
     </div>
 
 <!--right-->
-    <div class="col-9">
+    <div class="col-10">
       <div class="mt-5 pt-5">
         <div class="d-flex align-items-center justify-content-center">
-          <h5 class="lh-1">
+          <h5>
             ようこそ、ながのCAKEへ！<br>
             このサイトは、ケーキ販売のECサイトになります。<br>
             会員でない方も商品の閲覧はできますが、<br>
@@ -19,7 +19,6 @@
         </div>
       </div>
     </div>
-    <div class="col-1"></div>
   </div>
 
 
