--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,9 @@
 
        <!--顧客ログイン時-->
           <% if customer_signed_in? %>
-            <div class="col-2 offset-2 mt-5">
-              <div class="text-white">ようこそ、<%= current_customer.last_name %>さん！</div>
+            <div class="col-2 offset-2 pt-4">
+              <div class="text-white">ようこそ、</div>
+              <div class="h5 text-white pl-3"><%= current_customer.last_name %>さん！</div>
             </div>
 
             <div class="col-5 mt-3">
@@ -64,7 +65,7 @@
 
        <!--管理者ログイン時-->
           <% elsif admin_signed_in? %>
-            <div class="col-7 offset-2 float-right mt-3">
+            <div class="col-8 offset-1 float-right pt-3">
               <ul class="navbar list-inline-item list-unstyled">
 
                 <li class="nav-item btn btn-light text-decoration-none">
@@ -88,7 +89,7 @@
           </div>
 
           <div class="row float-right">
-            <div class="col-12 mb-2 mr-3">
+            <div class="col-12 pb-2 pr-4">
               <%= form_with url:admin_items_path, method: :get do |f| %>
 
                 <%= f.text_field :seach, placeholder: "Seach" %>
@@ -150,7 +151,6 @@
 <!--footer-->
   <footer>
     <div class="footer bg-dark">
-      <!--<div class="footer"></div>-->
     </div>
   </footer>
 
