--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -6,12 +6,12 @@
 
   <!--ジャンル検索-->
     <% if params[:name].present? %>
-      <div class="col-10 mt-5">
+      <div class="col-9 mt-5">
         <h4><%= @genre.name %>一覧<span>（全<%= @genre.items.count %>件）</span></h4>
 
         <div class="p-4 bg-white d-flex flex-row flex-wrap">
          <% @genre.items.each do |genre_item| %>
-           <div class="col-3">
+           <div class="ml-5">
              <%= link_to item_path(genre_item) do %>
                <%= image_tag genre_item.get_item_image(200, 200) %>
              <% end %>
@@ -20,17 +20,18 @@
            </div>
          <% end %>
         </div>
-        <div class="col-1"></div>
       </div>
+      <div class="col-1"></div>
+    </div>
 
   <!--商品検索/通常-->
     <% else %>
-      <div class="col-10 mt-5">
+      <div class="col-9 mt-5">
         <h4 class="pb-4">商品一覧<span>（全<%= @items.count %>件）</span></h4>
 
-        <div class="p-4 bg-white d-flex flex-row flex-wrap">
+        <div class="p-3 my-2 bg-white d-flex flex-row flex-wrap">
           <% @items.each do |item| %>
-          <div class="col-3">
+          <div class="ml-5">
             <%= link_to item_path(item) do %>
               <%= image_tag item.get_item_image(200, 200) %>
             <% end %>
@@ -39,9 +40,8 @@
           </div>
           <% end %>
         </div>
-        <div class="col-1"></div>
       </div>
-        <!--%= paginate @items %>-->
+      <div class="col-1"></div>
 
     <% end %>
 
