--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -55,7 +55,7 @@
         <% end %>
         <tr>
           <td class="border border-0">
-            <%= link_to "買い物を続ける", items_path, class: 'btn btn-primary' %>
+            <%= link_to "買い物を続ける", root_path, class: 'btn btn-primary' %>
           </td>
           <td></td>
           <td></td>
@@ -74,10 +74,15 @@
   </div>
 
   <div class="row m-5">
+  <% if @cart_items.present? %>
     <div class="col-4 offset-4">
       <%= link_to "情報入力に進む", new_order_path, class: 'btn btn-success' %>
     </div>
     <div class="col-4"></div>
+  <% else %>
+    <div></div>
+  <% end %>
+
   </div>
 
 </div>
