--- a/app/views/public/customers/confirm.html.erb
+++ b/app/views/public/customers/confirm.html.erb
@@ -20,7 +20,7 @@
       <%= link_to "退会しない", customers_mypage_path(@customer), class: 'btn btn-primary' %>
     </div>
     <div class="col-2">
-      <%= link_to "退会する", customers_resign_path, method: :patch, class: 'btn btn-danger' %>
+      <%= link_to "退会する", customers_resign_path, method: :patch, "data-confirm" => "本当に退会してよろしいですか？", class: 'btn btn-danger' %>
     </div>
     <div class="col-4"></div>
   </div>
