--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -66,6 +66,13 @@
         </tbody>
       </table>
     </div>
-    <!--<div class="col-1"></div>-->
   </div>
+  
+  <div class="row">
+    <div class="col-2 offset-5 mb-4">
+      <%= paginate @orders %>
+    </div>
+    <div class="col-5"></div>
+  </div>
+  
 </div>
