--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -4,7 +4,7 @@
     <div class="col-2 offset-2 pt-4">
       <h4>商品一覧</h4>
     </div>
-    <div class="col-8 pt-3">
+    <div class="col-1 offset-7 pt-3 pl-5">
       <%= link_to "+", new_admin_item_path, class: 'btn btn-light rounded-circle' %>
     </div>
   </div>
