--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -42,7 +42,7 @@
           <%= f.label :is_sale_false, "販売停止中" %>
         </div>
         <div class="pt-3">
-          <%= f.submit "変更を保存", class: 'btn btn-success px-3' %>
+          <%= f.submit "新規登録", class: 'btn btn-success px-3' %>
         </div>
       </div>
       <div class="col-4"></div>
